Add push configs and reg

--- a/.io-config.json
+++ b/.io-config.json
@@ -1,1 +1,1 @@
-{"dev_push":true,"app_id":"95338998","api_key":"977a291e1c54b3dea679ed538b170900c06707912c6e5b50"}
+{"dev_push":true,"app_id":"95338998","api_key":"977a291e1c54b3dea679ed538b170900c06707912c6e5b50","gcm_key":"114021018578"}
