--- a/.io-config.json
+++ b/.io-config.json
@@ -1,1 +1,1 @@
-{"dev_push":true,"app_id":"95338998","api_key":"977a291e1c54b3dea679ed538b170900c06707912c6e5b50","gcm_key":"114021018578"}
+{"dev_push":false,"app_id":"de21c305","api_key":"e69356db4d5a3a06f3e2f74b6be0ce31ce2a612a3c902da9","gcm_key":"114021018578"}
